--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
             <version>1.6.3</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.21.2</version>
+        </dependency>
 	</dependencies>
 
 	<build>
